--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -31,9 +31,9 @@ test:
 production:
   secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
 
-MAILGUN_LOGIN=postmaster@sandbox7a2e4fa609ce48aaa39a7b621f0f0089.mailgun.org
-MAILGUN_PASSWORD=a3a8f5681c57be6840396fd2caa1e222
+MAILGUN_LOGIN: postmaster@sandbox7a2e4fa609ce48aaa39a7b621f0f0089.mailgun.org
+MAILGUN_PASSWORD: a3a8f5681c57be6840396fd2caa1e222
 
-TWILIO_SID=ACe900f3d1781c66ac6306954313203977
-TWILIO_TOKEN=dfab84524b51b957bd91a0b9cd3aad69
-TWILIO_NUMBER=+13852360559
+TWILIO_SID: ACe900f3d1781c66ac6306954313203977
+TWILIO_TOKEN: dfab84524b51b957bd91a0b9cd3aad69
+TWILIO_NUMBER: +13852360559
